--- a/SourceCode/2024/March2024/sampath/Task 5/Main.xaml
+++ b/SourceCode/2024/March2024/sampath/Task 5/Main.xaml
@@ -85,7 +85,7 @@
       <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence sap2010:Annotation.AnnotationText="Task 5: Addition of two variables using geniric variable types&#xD;&#xA;step 1:&#xD;&#xA;create 2 assign activities for two different variable types&#xD;&#xA;step 2:&#xD;&#xA;display the result" DisplayName="Task 5: Add two variables using geniric variable type" sap:VirtualizedContainerService.HintSize="696,835" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Task 5: Add two variables using geniric variable types&#xD;&#xA;step 1:&#xD;&#xA;create 2 assign activities for two different variable types&#xD;&#xA;step 2:&#xD;&#xA;use write line activity to display the result" DisplayName="Task 5: Add two variables using geniric variable type" sap:VirtualizedContainerService.HintSize="696,835" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -149,7 +149,7 @@
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <av:Point x:Key="ShapeLocation">180,307.5</av:Point>
                     <av:Size x:Key="ShapeSize">200,25</av:Size>
-                    <av:PointCollection x:Key="ConnectorLocation">280,332.5 280,362.5 270,362.5 270,397.5</av:PointCollection>
+                    <av:PointCollection x:Key="ConnectorLocation">280,332.5 280,362.5 290,362.5 290,397.5</av:PointCollection>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
                 <Assign DisplayName="result" sap:VirtualizedContainerService.HintSize="200,25" sap2010:WorkflowViewState.IdRef="Assign_3">
@@ -164,17 +164,17 @@
                   <FlowStep x:Name="__ReferenceID2">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:Point x:Key="ShapeLocation">170,397.5</av:Point>
+                        <av:Point x:Key="ShapeLocation">190,397.5</av:Point>
                         <av:Size x:Key="ShapeSize">200,25</av:Size>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="display result" sap:VirtualizedContainerService.HintSize="200,25" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[result]">
+                    <WriteLine DisplayName="display result" sap:VirtualizedContainerService.HintSize="200,25" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[result]">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
-                    </ui:MessageBox>
+                    </WriteLine>
                   </FlowStep>
                 </FlowStep.Next>
               </FlowStep>
