--- a/SourceCode/2024/March2024/Aravind/Task 6/Main.xaml
+++ b/SourceCode/2024/March2024/Aravind/Task 6/Main.xaml
@@ -86,7 +86,7 @@
       <AssemblyReference>UiPath.Platform</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Step 1: Create assign activity to assign the values&#xD;&#xA;Step 2: Use loop to write into a text file" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="512,680" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Step 1: Create assign activity to assign the values&#xA;Step 2: Use loop to write into a text file" DisplayName="Task 6" sap:VirtualizedContainerService.HintSize="512,680" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="s:String[]" Name="Fruits" />
     </Sequence.Variables>
